--- a/Mystyle.css
+++ b/Mystyle.css
@@ -10,7 +10,7 @@ body{
 
 }
 .landing{
-    background-image: url("../images/bg.jpg");
+    background-image: url("bg.jpg");
     background-size:cover;
     background-position: center;
     height: 100vh;
