--- a/Mystyle3.css
+++ b/Mystyle3.css
@@ -3,7 +3,7 @@
 
 }
 body{
-    background-image: url("bg.jpg");
+    background-color: yellow;
     background-size:cover;
     background-position: center;
     height:97.2vh;
